official elixir image

--- a/techio.yml
+++ b/techio.yml
@@ -16,4 +16,5 @@ projects:
     # Set the docker image. This image runs mix tests using this syntax:
     # @[Code Editor Title]({"stubs": ["EditorFile1.ex", "EditorFile2.ex", ...], "command": "MyMixFile.exs:10"})
     runner:
-      name: cgcharlotte/elixir-exunit-runner
+      name: elixir/latest
+      buildCommand: mix compile
