--- a/techio.yml
+++ b/techio.yml
@@ -1,19 +1,11 @@
-title: Advanced Elixir template
-
-# Table of content
+title: Elixir Project
 plan:
-  - title: Welcome # Set the page title (only displayed if your contribution has several pages)
-    statement: markdowns/welcome.md # Set the file path to the page content
-#  - title: Another Page
-#    statement: markdowns/another-page.md
-
-
-# Settings for your programming projects and the associated Docker images
+- title: Welcome
+  statement: markdowns/welcome.md
 projects:
   elixir:
-    root: /elixir-project # Set the root path to your Elixir project
-
-    # Set the docker image. This image runs mix tests using this syntax:
-    # @[Code Editor Title]({"stubs": ["EditorFile1.ex", "EditorFile2.ex", ...], "command": "MyMixFile.exs:10"})
-    runner: elixir:latest
     buildCommand: mix compile
+    root: /elixir-project
+    runner:
+      name: elixir
+      version: latest
